# Echo

./: main  main.c
client/: .gitignore  CMakeLists.txt  config.h  config.h.in  echo.cpp  echo_client.cpp
client/include/echo/: Chat.hpp  Common.hpp  Echo.hpp  EchoClient.hpp  EchoReader.hpp  EchoWriter.hpp
client/src/: Chat.cpp  Common.cpp  Echo.cpp  EchoClient.cpp  EchoReader.cpp
client/test/: CMakeLists.txt
core/: CMakeLists.txt
core/cmake/: EchoConfig.cmake
core/include/echo/: Chat.hpp  Echo.hpp  EchoEvent.hpp  EchoProtocol.hpp  EchoReader.hpp  EchoWriter.hpp
core/src/: Chat.cpp  Echo.cpp  EchoReader.cpp  EchoWriter.cpp
core/test/: CMakeLists.txt  echo_test.cpp
server/: CMakeLists.txt  README.md  echo_server.cpp
server/include/echo/: Coordinator.hpp  DB.hpp  EchoServer.hpp  TriggerService.hpp  UserDB.hpp
server/src/: Coordinator.cpp  DB.cpp  EchoServer.cpp  TriggerService.cpp  UserDB.cpp
server/test/: CMakeLists.txt
